--- a/einsum.ipynb
+++ b/einsum.ipynb
@@ -56,9 +56,9 @@
    "metadata": {},
    "source": [
     "*Einstein notation*, AKA *Enstein summation* or *Einsum* is a concise way to express matrix operations. It is particularly suited for tensors operations and, thus, mainly used in Physics. In particular Einstein invented such notation in order to easily and cleary indicate the indexes of the tensors over which to perform matrix products.  \n",
-    "[Numpy einsum] was the first python implementation of such notation, as much as I know. You can know more from [here](https://ajcr.net/Basic-guide-to-einsum/#historical-notes-and-links).  \n",
+    "[Numpy einsum](https://numpy.org/doc/stable/reference/generated/numpy.einsum.html) was the first python implementation of such notation, as much as I know. You can know more from [here](https://ajcr.net/Basic-guide-to-einsum/#historical-notes-and-links).  \n",
     "It is important to notice that **Numpy einsum is not a perfect copy of the Einstein notation**, it has its pros and cons.\n",
-    "[Torch einsum](https://pytorch.org/docs/stable/generated/torch.einsum.html#torch-einsum) is the Pytorch version of the numpy implementation. It came with perks like parallelization on GPU, so it was faster than the numpy one at the beginning. As much as I know, Numpy recently optimized einsum. Pytorch einsum is not the perfect copy of numpy einsum. For example I noticed it lacks the broadcasting of a scalar over a vector. \n",
+    "[Torch einsum](https://pytorch.org/docs/stable/generated/torch.einsum.html#torch-einsum) is the Pytorch version of the Numpy implementation. It came with perks like parallelization on GPU, so it was faster than the Numpy one at the beginning. As much as I know, Numpy recently optimized einsum. Pytorch einsum is not the perfect copy of Numpy einsum. For example I noticed it lacks the broadcasting of a scalar over a vector. \n",
     "\n",
     "For more info you can have a look at the [References](#refs) or Google will help you.\n"
    ]
